LPK-117 move /img/ to /lp-static/img/

--- a/resources/private/common-html/sass/main.scss
+++ b/resources/private/common-html/sass/main.scss
@@ -39,7 +39,7 @@
 }
 
 @mixin spite-bg {
-  background-image: url('/img/icons-sprite-1.18.png');
+  background-image: url('/lp-static/img/icons-sprite-1.18.png');
   background-repeat: no-repeat;
 }
 
