--- a/resources/private/common-html/sass/partials/_modal.scss
+++ b/resources/private/common-html/sass/partials/_modal.scss
@@ -198,7 +198,7 @@
     text-align: center;
     z-index: 5000;
     div.ajax {
-      background: url(/img/ajax-loader.gif) no-repeat center center;
+      background: url(/lp-static/img/ajax-loader.gif) no-repeat center center;
       margin: auto;
       height: 160px;
     }
