--- a/resources/private/common-html/sass/partials/_other.scss
+++ b/resources/private/common-html/sass/partials/_other.scss
@@ -41,7 +41,7 @@
   div {
     margin-top: 50px;
     padding-top: 100px;
-    background: url(/img/ajax-loader.gif) no-repeat center center;
+    background: url(/lp-static/img/ajax-loader.gif) no-repeat center center;
   }
 
   p {
