--- a/resources/private/common-html/sass/views/_create_application.scss
+++ b/resources/private/common-html/sass/views/_create_application.scss
@@ -1,5 +1,5 @@
 .ui-autocomplete-loading {
-  background: white url("/img/ajax-loader-16.gif") right center no-repeat;
+  background: white url("/lp-static/img/ajax-loader-16.gif") right center no-repeat;
 }
 
 .create-application-search-box {
