--- a/resources/private/common-html/sass/views/_neighbor.scss
+++ b/resources/private/common-html/sass/views/_neighbor.scss
@@ -2,7 +2,7 @@
   .pending {
     width: 100%;
     height: 100px;
-    background-image: url(/img/ajax-loader.gif);
+    background-image: url(/lp-static/img/ajax-loader.gif);
     background-repeat: no-repeat;
     background-position: center center;
   }
