--- a/resources/public/lp-static/css/main.css
+++ b/resources/public/lp-static/css/main.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+﻿@charset "UTF-8";
 /*!
  * ajk's Hot New Template
  * Made by ajk (ajk.fi)
@@ -441,7 +441,7 @@ a:active, a:visited, a:hover {
 /* line 2, ../../../private/common-html/sass/partials/_icons.scss */
 .icon, .icon-small, .icon-tiny, .icon-large, .ui-icon {
   display: inline-block;
-  background-image: url("/img/icons-sprite-1.18.png");
+  background-image: url("/lp-static/img/icons-sprite-1.18.png");
   background-repeat: no-repeat;
   overflow: hidden;
 }
@@ -2025,7 +2025,7 @@ button.btn-dialog.cancel, .btn-dialog.cancel {
   display: inline-block;
   width: 16px;
   height: 16px;
-  background-image: url("/img/ajax-loader-grey-small.gif");
+  background-image: url("/lp-static/img/ajax-loader-grey-small.gif");
   position: absolute;
   top: 6px;
   right: 8px;
@@ -4440,7 +4440,7 @@ input[readonly]:focus, textarea[readonly]:focus {
 }
 /* line 109, ../../../private/common-html/sass/partials/_forms.scss */
 .form-indicator .icon {
-  background-image: url("/img/icons-sprite-1.18.png");
+  background-image: url("/lp-static/img/icons-sprite-1.18.png");
   background-repeat: no-repeat;
   display: none;
   height: 24px;
@@ -5238,7 +5238,7 @@ div.sticky .form-approval-status.no-border-bottom.own-line .like-btn span, div.s
 /* line 862, ../../../private/common-html/sass/partials/_forms.scss */
 .form-help:before {
   content: " ";
-  background-image: url("/img/icons-sprite-1.18.png");
+  background-image: url("/lp-static/img/icons-sprite-1.18.png");
   background-repeat: no-repeat;
   width: 16px;
   height: 16px;
@@ -5272,7 +5272,7 @@ div.sticky .form-approval-status.no-border-bottom.own-line .like-btn span, div.s
 /* line 892, ../../../private/common-html/sass/partials/_forms.scss */
 .form-full-width .form-help:before {
   content: " ";
-  background-image: url("/img/icons-sprite-1.18.png");
+  background-image: url("/lp-static/img/icons-sprite-1.18.png");
   background-repeat: no-repeat;
   width: 16px;
   height: 16px;
@@ -8397,7 +8397,7 @@ ul.tabs {
 }
 /* line 200, ../../../private/common-html/sass/partials/_modal.scss */
 .dialog-content div.pending div.ajax {
-  background: url(/img/ajax-loader.gif) no-repeat center center;
+  background: url(/lp-static/img/ajax-loader.gif) no-repeat center center;
   margin: auto;
   height: 160px;
 }
@@ -9114,7 +9114,7 @@ ul.no-bullets {
 /* line 107, ../../../private/common-html/sass/partials/_accordion.scss */
 .accordion-indicator .icon {
   display: none;
-  background-image: url("/img/icons-sprite-1.18.png");
+  background-image: url("/lp-static/img/icons-sprite-1.18.png");
   background-repeat: no-repeat;
 }
 /* line 112, ../../../private/common-html/sass/partials/_accordion.scss */
@@ -10567,7 +10567,7 @@ div.search i {
   content: "";
   display: block;
   position: absolute;
-  background-image: url("/img/icons-sprite-1.18.png");
+  background-image: url("/lp-static/img/icons-sprite-1.18.png");
   background-repeat: no-repeat;
   background-position: 0px -3393px;
   height: 22px;
@@ -10581,7 +10581,7 @@ div.search i {
   content: "";
   display: block;
   position: absolute;
-  background-image: url("/img/icons-sprite-1.18.png");
+  background-image: url("/lp-static/img/icons-sprite-1.18.png");
   background-repeat: no-repeat;
   background-position: 0px -3293px;
   height: 22px;
@@ -11793,7 +11793,7 @@ h2 > i.is-right {
 
 /* line 1, ../../../private/common-html/sass/views/_create_application.scss */
 .ui-autocomplete-loading {
-  background: white url("/img/ajax-loader-16.gif") right center no-repeat;
+  background: white url("/lp-static/img/ajax-loader-16.gif") right center no-repeat;
 }
 
 /* line 5, ../../../private/common-html/sass/views/_create_application.scss */
@@ -11940,7 +11940,7 @@ h2 > i.is-right {
 
 /* line 127, ../../../private/common-html/sass/views/_create_application.scss */
 #popup-id_close {
-  background-image: url("/img/icons-sprite-1.18.png");
+  background-image: url("/lp-static/img/icons-sprite-1.18.png");
   background-repeat: no-repeat;
   background-position: 0px -4100px;
   top: 4px !important;
@@ -12571,7 +12571,7 @@ table.admin-settings td.value .save-indicator {
 #neighbor-show .pending {
   width: 100%;
   height: 100px;
-  background-image: url(/img/ajax-loader.gif);
+  background-image: url(/lp-static/img/ajax-loader.gif);
   background-repeat: no-repeat;
   background-position: center center;
 }
@@ -12674,7 +12674,7 @@ table.admin-settings td.value .save-indicator {
 /* line 75, ../../../private/common-html/sass/views/_register.scss */
 #account-type-selection .account-box.selected:after {
   content: " ";
-  background-image: url("/img/icons-sprite-1.18.png");
+  background-image: url("/lp-static/img/icons-sprite-1.18.png");
   background-repeat: no-repeat;
   width: 100px;
   height: 100px;
@@ -13047,7 +13047,7 @@ table.admin-settings td.value .save-indicator {
 }
 /* line 43, ../../../private/common-html/sass/views/_side_panel.scss */
 #side-panel .buttons .btn-conversation .unseen-comments, #side-panel .buttons .btn-notice .unseen-comments {
-  background-image: url("/img/icons-sprite-1.18.png");
+  background-image: url("/lp-static/img/icons-sprite-1.18.png");
   background-repeat: no-repeat;
   background-position: 1px -5396px;
   width: 22px;
@@ -13094,7 +13094,7 @@ table.admin-settings td.value .save-indicator {
 }
 /* line 81, ../../../private/common-html/sass/views/_side_panel.scss */
 #side-panel .header .close-btn {
-  background-image: url("/img/icons-sprite-1.18.png");
+  background-image: url("/lp-static/img/icons-sprite-1.18.png");
   background-repeat: no-repeat;
   width: 16px;
   height: 16px;
@@ -13733,7 +13733,7 @@ div.olControlZoom a:hover, .olControlLupapisteEditingToolbar div:hover {
 #ajax-loader-container div {
   margin-top: 50px;
   padding-top: 100px;
-  background: url(/img/ajax-loader.gif) no-repeat center center;
+  background: url(/lp-static/img/ajax-loader.gif) no-repeat center center;
 }
 /* line 47, ../../../private/common-html/sass/partials/_other.scss */
 #ajax-loader-container p {
