--- a/resources/public/lp-static/css/main_2.css
+++ b/resources/public/lp-static/css/main_2.css
@@ -6498,7 +6498,22 @@ span.icon_clear:before {
 }
 /* line 141, ../../../private/common-html/sass/views/_application.scss */
 .application_summary .application_summary_info .link-permit-item {
+  color: #f39129;
   text-decoration: none;
+}
+/* line 14, ../../../private/common-html/sass/partials/_links.scss */
+.application_summary .application_summary_info .link-permit-item:link, .application_summary .application_summary_info .link-permit-item:visited {
+  color: #f39129;
+}
+/* line 17, ../../../private/common-html/sass/partials/_links.scss */
+.application_summary .application_summary_info .link-permit-item:hover {
+  color: #f7ac2e;
+  text-decoration: underline;
+}
+/* line 21, ../../../private/common-html/sass/partials/_links.scss */
+.application_summary .application_summary_info .link-permit-item:active {
+  color: #fbc732;
+  text-decoration: underline;
 }
 /* line 145, ../../../private/common-html/sass/views/_application.scss */
 .application_summary .application_summary_info p, .application_summary .application_summary_info .application_summary_text, .application_summary .application_summary_info ul {
@@ -9289,274 +9304,4 @@ div.olControlZoom a:hover, .olControlLupapisteEditingToolbar div:hover {
 /* line 202, ../../../private/common-html/sass/views/_openlayers2.scss */
 .olControlLupapisteEditingToolbar .olControlNavigationItemActive:before {
   content: "\e642";
-}
-
-/* line 206, ../../../private/common-html/sass/views/_openlayers2.scss */
-.olControlLupapisteEditingToolbar .olControlDrawFeaturePointItemInactive:before {
-  content: "\e904";
-}
-
-/* line 209, ../../../private/common-html/sass/views/_openlayers2.scss */
-.olControlLupapisteEditingToolbar .olControlDrawFeaturePointItemActive:before {
-  content: "\e904";
-  color: #000;
-}
-
-/* line 213, ../../../private/common-html/sass/views/_openlayers2.scss */
-.olControlLupapisteEditingToolbar .olControlDrawFeaturePolygonItemInactive:before {
-  content: "\e63f";
-}
-
-/* line 216, ../../../private/common-html/sass/views/_openlayers2.scss */
-.olControlLupapisteEditingToolbar .olControlDrawFeaturePolygonItemActive:before {
-  content: "\e63f";
-  color: #000;
-}
-
-/* line 220, ../../../private/common-html/sass/views/_openlayers2.scss */
-.olControlLupapisteEditingToolbar .olControlDrawFeatureCircleItemInactive:before {
-  content: "\e903";
-}
-
-/* line 223, ../../../private/common-html/sass/views/_openlayers2.scss */
-.olControlLupapisteEditingToolbar .olControlDrawFeatureCircleItemActive:before {
-  content: "\e903";
-  color: #000;
-}
-
-/**
- * Animations
- */
-/* line 232, ../../../private/common-html/sass/views/_openlayers2.scss */
-.olLayerGrid .olTileImage {
-  -webkit-transition: opacity 0.2s linear;
-  -moz-transition: opacity 0.2s linear;
-  -o-transition: opacity 0.2s linear;
-  transition: opacity 0.2s linear;
-}
-
-/*------------------------------------*\
-    OTHER
-\*------------------------------------*/
-/* ALL THE REST
------------------------------------------------------------------------------ */
-/* hide stuff without resorting to display:none; */
-/* line 3, ../../../private/common-html/sass/partials/_other.scss */
-.hide {
-  visibility: hidden;
-  width: 0 !important;
-  height: 0 !important;
-  line-height: 0 !important;
-  padding: 0 !important;
-  margin: 0 !important;
-}
-
-/* Pretty &amp; s */
-/* line 13, ../../../private/common-html/sass/partials/_other.scss */
-.amp {
-  font-family: 'Goudy Old Style', Baskerville, Palatino, 'Palatino Linotype', 'Book Antiqua', serif;
-  font-style: italic;
-}
-
-/* micro clearfix */
-/* line 20, ../../../private/common-html/sass/partials/_other.scss */
-.cf {
-  *zoom: 1;
-}
-/* line 22, ../../../private/common-html/sass/partials/_other.scss */
-.cf:before, .cf:after {
-  content: "";
-  display: table;
-}
-/* line 26, ../../../private/common-html/sass/partials/_other.scss */
-.cf:after {
-  clear: both;
-}
-
-/* line 31, ../../../private/common-html/sass/partials/_other.scss */
-#ajax-loader-container {
-  display: none;
-  position: fixed;
-  top: 60px;
-  left: 0px;
-  right: 0px;
-  bottom: 0px;
-  background: #ffffff;
-  z-index: 8000;
-}
-/* line 41, ../../../private/common-html/sass/partials/_other.scss */
-#ajax-loader-container div {
-  margin-top: 50px;
-  padding-top: 100px;
-  background: url(/lp-static/img/ajax-loader.gif) no-repeat center center;
-}
-/* line 47, ../../../private/common-html/sass/partials/_other.scss */
-#ajax-loader-container p {
-  margin-top: 50px;
-  width: 100%;
-  text-align: center;
-}
-
-/* line 54, ../../../private/common-html/sass/partials/_other.scss */
-.hr {
-  width: 100%;
-  border-bottom: 1px solid #dddddd;
-  margin-top: 12px;
-  margin-bottom: 12px;
-}
-
-/* feature class for marking unfinished content */
-/* line 3, ../../../private/common-html/sass/partials/_todo.scss */
-.feature {
-  border: orange dotted medium;
-  padding: 6px;
-  border-radius: 10px;
-}
-/* line 7, ../../../private/common-html/sass/partials/_todo.scss */
-.feature .legend {
-  display: inline-block;
-  position: relative;
-  top: -20px;
-  right: -10px;
-  background-color: orange;
-  color: black;
-  padding: 3px;
-  border-radius: 5px;
-}
-
-/*
-  Lupapalvelu CSS:
-*/
-/* line 158, ../../../private/common-html/sass/main.scss */
-.ltext-error {
-  color: #ffd280 !important;
-  font-weight: bold !important;
-  text-shadow: 0px 1px 0 black !important;
-}
-
-/* line 164, ../../../private/common-html/sass/main.scss */
-.visible {
-  display: block;
-}
-
-/* line 168, ../../../private/common-html/sass/main.scss */
-.hidden {
-  display: none !important;
-}
-
-/* line 172, ../../../private/common-html/sass/main.scss */
-.inline {
-  display: inline;
-}
-
-/* line 176, ../../../private/common-html/sass/main.scss */
-.template {
-  display: none;
-}
-
-/* line 180, ../../../private/common-html/sass/main.scss */
-#main-nav-bar {
-  display: none;
-}
-
-/* line 184, ../../../private/common-html/sass/main.scss */
-.inert-table tbody tr:hover td,
-.inert-table tbody tr:hover th {
-  background-color: #ffffff;
-}
-
-/* line 189, ../../../private/common-html/sass/main.scss */
-#application table input {
-  margin: 0px;
-}
-
-/* line 193, ../../../private/common-html/sass/main.scss */
-.droparea {
-  width: 150px;
-  height: 100px;
-  border: 5px #858585 dotted;
-  color: #858585;
-  border-radius: 15px;
-  vertical-align: middle;
-  text-align: center;
-  display: table-cell;
-}
-
-/* line 204, ../../../private/common-html/sass/main.scss */
-.droparea-hover {
-  border-color: #101010;
-  color: #101010;
-}
-
-/* basic styles*/
-/* line 212, ../../../private/common-html/sass/main.scss */
-.table {
-  font-size: 16px;
-  line-height: 24px;
-}
-
-/* map zoomer fix */
-/* line 218, ../../../private/common-html/sass/main.scss */
-div.pzbDiv {
-  right: 8px;
-  top: 10px;
-}
-
-/* line 223, ../../../private/common-html/sass/main.scss */
-.dev-debug {
-  z-index: 666;
-  width: 146px;
-  position: fixed !important;
-  right: 8px;
-  bottom: 8px;
-  background-color: white;
-  padding: 8px;
-  border: 1px solid black;
-  box-shadow: 3px 4px 7px;
-  font-size: 0.8em;
-  color: #333;
-}
-/* line 236, ../../../private/common-html/sass/main.scss */
-.dev-debug p {
-  margin-bottom: 4px;
-}
-/* line 238, ../../../private/common-html/sass/main.scss */
-.dev-debug p a {
-  display: block;
-}
-
-/* line 244, ../../../private/common-html/sass/main.scss */
-#ui-datepicker-div {
-  display: none;
-}
-
-/* find address and poi list: */
-/* line 249, ../../../private/common-html/sass/main.scss */
-.create-find {
-  font-size: 12px;
-}
-/* line 251, ../../../private/common-html/sass/main.scss */
-.create-find .type {
-  color: #555;
-  font-style: italic;
-}
-/* line 254, ../../../private/common-html/sass/main.scss */
-.create-find .type:before {
-  content: " (";
-}
-/* line 255, ../../../private/common-html/sass/main.scss */
-.create-find .type:after {
-  content: ")";
-}
-/* line 258, ../../../private/common-html/sass/main.scss */
-.create-find .number:before {
-  content: " ";
-}
-/* line 260, ../../../private/common-html/sass/main.scss */
-.create-find .municipality {
-  color: #555;
-}
-/* line 262, ../../../private/common-html/sass/main.scss */
-.create-find .municipality:before {
-  content: ", ";
 }
