--- a/resources/private/common-html/sass/views/_admin.scss
+++ b/resources/private/common-html/sass/views/_admin.scss
@@ -57,4 +57,10 @@
       margin-bottom: $marginM;
     }
   }
+  #modal-dialog-content-component {
+    select {
+      display: block;
+      margin: $marginS 0;
+    }
+  }
 }
