use add-scope endpoint in create-scope component

--- a/resources/private/common-html/sass/views/_admin.scss
+++ b/resources/private/common-html/sass/views/_admin.scss
@@ -58,9 +58,12 @@
     }
   }
   #modal-dialog-content-component {
-    select {
+    select, input {
       display: block;
       margin: $marginS 0;
+    }
+    input[type=text] {
+      width: $cols4;
     }
   }
 }
