Margin for command-links in naapurien kuulemiset table

--- a/resources/private/common-html/sass/views/_application.scss
+++ b/resources/private/common-html/sass/views/_application.scss
@@ -580,6 +580,12 @@ $app-gray-darkest: $gray187;
   }
 }
 
+.neighbors {
+  .command {
+   margin-right: $marginS;
+  }
+}
+
 #dialog-verdict-attachment-prints-order, #dialog-verdict-attachment-prints-order-history {
   .dialog-content {
     padding-left: 15px;
