--- a/resources/public/lp-static/css/main.css
+++ b/resources/public/lp-static/css/main.css
@@ -11508,168 +11508,173 @@ span.icon_clear:before {
 }
 
 /* line 584, ../../../private/common-html/sass/views/_application.scss */
+.neighbors .command {
+  margin-right: 6px;
+}
+
+/* line 590, ../../../private/common-html/sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .dialog-content, #dialog-verdict-attachment-prints-order-history .dialog-content {
   padding-left: 15px;
 }
-/* line 587, ../../../private/common-html/sass/views/_application.scss */
+/* line 593, ../../../private/common-html/sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .order-amount, #dialog-verdict-attachment-prints-order-history .order-amount {
   width: 18px;
 }
-/* line 590, ../../../private/common-html/sass/views/_application.scss */
+/* line 596, ../../../private/common-html/sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .btn-prints-dialog-ok, #dialog-verdict-attachment-prints-order-history .btn-prints-dialog-ok {
   margin-left: 15px;
 }
-/* line 594, ../../../private/common-html/sass/views/_application.scss */
+/* line 600, ../../../private/common-html/sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .context-error, #dialog-verdict-attachment-prints-order-history .context-error {
   max-width: 820px;
   word-wrap: break-word;
 }
-/* line 608, ../../../private/common-html/sass/views/_application.scss */
+/* line 614, ../../../private/common-html/sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .fixed-headers, #dialog-verdict-attachment-prints-order-history .fixed-headers {
   width: 820px;
   table-layout: fixed;
   margin-right: 20px;
 }
-/* line 613, ../../../private/common-html/sass/views/_application.scss */
+/* line 619, ../../../private/common-html/sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .fixed-headers .center, #dialog-verdict-attachment-prints-order-history .fixed-headers .center {
   text-align: center;
 }
-/* line 617, ../../../private/common-html/sass/views/_application.scss */
+/* line 623, ../../../private/common-html/sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .fixed-headers td, #dialog-verdict-attachment-prints-order-history .fixed-headers td {
   word-wrap: break-word;
 }
-/* line 621, ../../../private/common-html/sass/views/_application.scss */
+/* line 627, ../../../private/common-html/sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .fixed-headers td:nth-child(1), #dialog-verdict-attachment-prints-order .fixed-headers th:nth-child(1), #dialog-verdict-attachment-prints-order-history .fixed-headers td:nth-child(1), #dialog-verdict-attachment-prints-order-history .fixed-headers th:nth-child(1) {
   width: 200px;
   max-width: 200px;
 }
-/* line 625, ../../../private/common-html/sass/views/_application.scss */
+/* line 631, ../../../private/common-html/sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .fixed-headers td:nth-child(2), #dialog-verdict-attachment-prints-order .fixed-headers th:nth-child(2), #dialog-verdict-attachment-prints-order-history .fixed-headers td:nth-child(2), #dialog-verdict-attachment-prints-order-history .fixed-headers th:nth-child(2) {
   width: 200px;
   max-width: 200px;
 }
-/* line 629, ../../../private/common-html/sass/views/_application.scss */
+/* line 635, ../../../private/common-html/sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .fixed-headers td:nth-child(3), #dialog-verdict-attachment-prints-order .fixed-headers th:nth-child(3), #dialog-verdict-attachment-prints-order-history .fixed-headers td:nth-child(3), #dialog-verdict-attachment-prints-order-history .fixed-headers th:nth-child(3) {
   width: 300px;
   max-width: 300px;
 }
-/* line 633, ../../../private/common-html/sass/views/_application.scss */
+/* line 639, ../../../private/common-html/sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .fixed-headers td:nth-child(4), #dialog-verdict-attachment-prints-order .fixed-headers th:nth-child(4), #dialog-verdict-attachment-prints-order-history .fixed-headers td:nth-child(4), #dialog-verdict-attachment-prints-order-history .fixed-headers th:nth-child(4) {
   width: 120px;
   max-width: 120px;
 }
-/* line 639, ../../../private/common-html/sass/views/_application.scss */
+/* line 645, ../../../private/common-html/sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .fixed-headers thead tr, #dialog-verdict-attachment-prints-order-history .fixed-headers thead tr {
   display: block;
   position: relative;
 }
-/* line 644, ../../../private/common-html/sass/views/_application.scss */
+/* line 650, ../../../private/common-html/sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .fixed-headers tbody, #dialog-verdict-attachment-prints-order-history .fixed-headers tbody {
   display: block;
   overflow: auto;
   width: 100%;
   max-height: 200px;
 }
-/* line 652, ../../../private/common-html/sass/views/_application.scss */
+/* line 658, ../../../private/common-html/sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .old_ie_wrapper, #dialog-verdict-attachment-prints-order-history .old_ie_wrapper {
   max-height: 200px;
   width: 820px;
   overflow-x: hidden;
   overflow-y: auto;
 }
-/* line 657, ../../../private/common-html/sass/views/_application.scss */
+/* line 663, ../../../private/common-html/sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .old_ie_wrapper tbody, #dialog-verdict-attachment-prints-order-history .old_ie_wrapper tbody {
   height: auto;
 }
 
-/* line 662, ../../../private/common-html/sass/views/_application.scss */
+/* line 668, ../../../private/common-html/sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order-history .history-dialog-description {
   margin-bottom: 12px;
 }
-/* line 666, ../../../private/common-html/sass/views/_application.scss */
+/* line 672, ../../../private/common-html/sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order-history .history-items {
   margin-top: 6px;
   overflow-y: auto;
   max-height: 500px;
 }
-/* line 671, ../../../private/common-html/sass/views/_application.scss */
+/* line 677, ../../../private/common-html/sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order-history .history-items .history-item {
   margin: 6px 0;
 }
 
-/* line 678, ../../../private/common-html/sass/views/_application.scss */
+/* line 684, ../../../private/common-html/sass/views/_application.scss */
 .key-value-pair label {
   vertical-align: top;
   display: inline-block;
   width: 25%;
 }
-/* line 683, ../../../private/common-html/sass/views/_application.scss */
+/* line 689, ../../../private/common-html/sass/views/_application.scss */
 .key-value-pair .value {
   vertical-align: top;
   display: inline-block;
 }
 
-/* line 689, ../../../private/common-html/sass/views/_application.scss */
+/* line 695, ../../../private/common-html/sass/views/_application.scss */
 .inforequest-conversation {
   margin-top: 42px;
 }
-/* line 691, ../../../private/common-html/sass/views/_application.scss */
+/* line 697, ../../../private/common-html/sass/views/_application.scss */
 .inforequest-conversation h2 {
   border-bottom: 1px solid #c3c3c3;
 }
 
-/* line 696, ../../../private/common-html/sass/views/_application.scss */
+/* line 702, ../../../private/common-html/sass/views/_application.scss */
 .attachments-actions {
   margin-bottom: 24px;
 }
-/* line 698, ../../../private/common-html/sass/views/_application.scss */
+/* line 704, ../../../private/common-html/sass/views/_application.scss */
 .attachments-actions h3 {
   margin-top: 12px;
   font-weight: bold;
 }
 
-/* line 704, ../../../private/common-html/sass/views/_application.scss */
+/* line 710, ../../../private/common-html/sass/views/_application.scss */
 .parties-list {
   width: 100%;
   margin-bottom: 6px;
 }
-/* line 707, ../../../private/common-html/sass/views/_application.scss */
+/* line 713, ../../../private/common-html/sass/views/_application.scss */
 .parties-list button {
   margin: 12px 0;
 }
-/* line 710, ../../../private/common-html/sass/views/_application.scss */
+/* line 716, ../../../private/common-html/sass/views/_application.scss */
 .parties-list .party {
   display: table-row;
 }
-/* line 712, ../../../private/common-html/sass/views/_application.scss */
+/* line 718, ../../../private/common-html/sass/views/_application.scss */
 .parties-list .party .person {
   display: table-cell;
   padding-right: 12px;
 }
-/* line 716, ../../../private/common-html/sass/views/_application.scss */
+/* line 722, ../../../private/common-html/sass/views/_application.scss */
 .parties-list .party .invite-state {
   display: table-cell;
   padding-right: 12px;
 }
-/* line 720, ../../../private/common-html/sass/views/_application.scss */
+/* line 726, ../../../private/common-html/sass/views/_application.scss */
 .parties-list .party .invite-action {
   display: table-cell;
   padding-right: 12px;
 }
 
-/* line 728, ../../../private/common-html/sass/views/_application.scss */
+/* line 734, ../../../private/common-html/sass/views/_application.scss */
 #inforequest-marker-map {
   width: 30%;
   height: 520px;
   float: right;
   z-index: 2;
 }
-/* line 733, ../../../private/common-html/sass/views/_application.scss */
+/* line 739, ../../../private/common-html/sass/views/_application.scss */
 #inforequest-marker-map image {
   cursor: pointer;
 }
 
-/* line 738, ../../../private/common-html/sass/views/_application.scss */
+/* line 744, ../../../private/common-html/sass/views/_application.scss */
 #inforequest-marker-map-contents {
   z-index: 2;
   right: 30%;
@@ -11685,161 +11690,161 @@ span.icon_clear:before {
   border: 1px solid #b5b5b5;
   box-shadow: 1px 1px 2px #828282;
 }
-/* line 753, ../../../private/common-html/sass/views/_application.scss */
+/* line 759, ../../../private/common-html/sass/views/_application.scss */
 #inforequest-marker-map-contents .inforequest-card {
   padding: 12px;
   z-index: 10000;
   border-top: 1px solid #b5b5b5;
   width: 100%;
 }
-/* line 759, ../../../private/common-html/sass/views/_application.scss */
+/* line 765, ../../../private/common-html/sass/views/_application.scss */
 #inforequest-marker-map-contents .inforequest-card h3 {
   font-size: 20px;
 }
-/* line 761, ../../../private/common-html/sass/views/_application.scss */
+/* line 767, ../../../private/common-html/sass/views/_application.scss */
 #inforequest-marker-map-contents .inforequest-card h3.operation-type {
   margin-bottom: 12px;
 }
-/* line 766, ../../../private/common-html/sass/views/_application.scss */
+/* line 772, ../../../private/common-html/sass/views/_application.scss */
 #inforequest-marker-map-contents .inforequest-card .timestamp {
   float: right;
   font-size: 14px;
 }
-/* line 770, ../../../private/common-html/sass/views/_application.scss */
+/* line 776, ../../../private/common-html/sass/views/_application.scss */
 #inforequest-marker-map-contents .inforequest-card a {
   color: #333;
 }
-/* line 773, ../../../private/common-html/sass/views/_application.scss */
+/* line 779, ../../../private/common-html/sass/views/_application.scss */
 #inforequest-marker-map-contents .inforequest-card:first-child {
   border-top: none;
 }
-/* line 777, ../../../private/common-html/sass/views/_application.scss */
+/* line 783, ../../../private/common-html/sass/views/_application.scss */
 #inforequest-marker-map-contents .inforequest-card div {
   padding-bottom: 4px;
   margin-bottom: 8px;
   border-bottom: 1px solid #e8e8e8;
 }
-/* line 781, ../../../private/common-html/sass/views/_application.scss */
+/* line 787, ../../../private/common-html/sass/views/_application.scss */
 #inforequest-marker-map-contents .inforequest-card div:last-child {
   border-bottom: none;
   padding-bottom: 0px;
 }
-/* line 785, ../../../private/common-html/sass/views/_application.scss */
+/* line 791, ../../../private/common-html/sass/views/_application.scss */
 #inforequest-marker-map-contents .inforequest-card div blockquote {
   font-size: 16px;
 }
-/* line 788, ../../../private/common-html/sass/views/_application.scss */
+/* line 794, ../../../private/common-html/sass/views/_application.scss */
 #inforequest-marker-map-contents .inforequest-card div .comment-type {
   font-weight: 700;
 }
 
-/* line 797, ../../../private/common-html/sass/views/_application.scss */
+/* line 803, ../../../private/common-html/sass/views/_application.scss */
 .verdict-text {
   white-space: pre-line;
   width: 28.75em;
 }
 
-/* line 802, ../../../private/common-html/sass/views/_application.scss */
+/* line 808, ../../../private/common-html/sass/views/_application.scss */
 .required-field-error-doc {
   margin: 24px 0 6px;
 }
 
-/* line 806, ../../../private/common-html/sass/views/_application.scss */
+/* line 812, ../../../private/common-html/sass/views/_application.scss */
 .requiredField-line {
   display: table-row;
 }
-/* line 808, ../../../private/common-html/sass/views/_application.scss */
+/* line 814, ../../../private/common-html/sass/views/_application.scss */
 .requiredField-line span, .requiredField-line a {
   display: table-cell;
 }
-/* line 811, ../../../private/common-html/sass/views/_application.scss */
+/* line 817, ../../../private/common-html/sass/views/_application.scss */
 .requiredField-line a {
   padding-left: 12px;
 }
-/* line 814, ../../../private/common-html/sass/views/_application.scss */
+/* line 820, ../../../private/common-html/sass/views/_application.scss */
 .requiredField-line .required-field-error-element-name {
   padding-left: 6px;
 }
-/* line 817, ../../../private/common-html/sass/views/_application.scss */
+/* line 823, ../../../private/common-html/sass/views/_application.scss */
 .requiredField-line .lupicon-circle-attention {
   color: #e34319;
 }
 
-/* line 822, ../../../private/common-html/sass/views/_application.scss */
+/* line 828, ../../../private/common-html/sass/views/_application.scss */
 .invited-foremans {
   margin-bottom: 24px;
 }
-/* line 824, ../../../private/common-html/sass/views/_application.scss */
+/* line 830, ../../../private/common-html/sass/views/_application.scss */
 .invited-foremans .foreman {
   display: table-row;
 }
-/* line 826, ../../../private/common-html/sass/views/_application.scss */
+/* line 832, ../../../private/common-html/sass/views/_application.scss */
 .invited-foremans .foreman span {
   display: table-cell;
   padding-right: 6px;
 }
-/* line 834, ../../../private/common-html/sass/views/_application.scss */
+/* line 840, ../../../private/common-html/sass/views/_application.scss */
 .invited-foremans .foreman-state:before {
   content: "(";
 }
-/* line 837, ../../../private/common-html/sass/views/_application.scss */
+/* line 843, ../../../private/common-html/sass/views/_application.scss */
 .invited-foremans .foreman-state:after {
   content: ")";
 }
 
-/* line 843, ../../../private/common-html/sass/views/_application.scss */
+/* line 849, ../../../private/common-html/sass/views/_application.scss */
 .tasks-foreman {
   position: relative;
 }
-/* line 846, ../../../private/common-html/sass/views/_application.scss */
+/* line 852, ../../../private/common-html/sass/views/_application.scss */
 .tasks-foreman .form-input {
   display: inline-block;
   margin: 0 6px 0 0;
 }
-/* line 852, ../../../private/common-html/sass/views/_application.scss */
+/* line 858, ../../../private/common-html/sass/views/_application.scss */
 .tasks-foreman .form-input.combobox.long, .tasks-foreman select.long {
   width: 41.25em;
 }
-/* line 857, ../../../private/common-html/sass/views/_application.scss */
+/* line 863, ../../../private/common-html/sass/views/_application.scss */
 .tasks-foreman thead tr:first-child td {
   padding-left: 0;
 }
-/* line 862, ../../../private/common-html/sass/views/_application.scss */
+/* line 868, ../../../private/common-html/sass/views/_application.scss */
 .tasks-foreman .foreman-state:before {
   content: "(";
 }
-/* line 865, ../../../private/common-html/sass/views/_application.scss */
+/* line 871, ../../../private/common-html/sass/views/_application.scss */
 .tasks-foreman .foreman-state:after {
   content: ")";
 }
-/* line 870, ../../../private/common-html/sass/views/_application.scss */
+/* line 876, ../../../private/common-html/sass/views/_application.scss */
 .tasks-foreman .add-foreman:before {
   content: "[";
 }
-/* line 873, ../../../private/common-html/sass/views/_application.scss */
+/* line 879, ../../../private/common-html/sass/views/_application.scss */
 .tasks-foreman .add-foreman:after {
   content: "]";
 }
 
-/* line 879, ../../../private/common-html/sass/views/_application.scss */
+/* line 885, ../../../private/common-html/sass/views/_application.scss */
 .operation-info {
   width: 55%;
   display: inline-block;
   vertical-align: top;
 }
 
-/* line 884, ../../../private/common-html/sass/views/_application.scss */
+/* line 890, ../../../private/common-html/sass/views/_application.scss */
 .organizationLinks {
   vertical-align: top;
   width: 39%;
   padding-left: 48px;
   display: inline-block;
 }
-/* line 889, ../../../private/common-html/sass/views/_application.scss */
+/* line 895, ../../../private/common-html/sass/views/_application.scss */
 .organizationLinks .organization-links {
   margin-bottom: 12px;
 }
-/* line 891, ../../../private/common-html/sass/views/_application.scss */
+/* line 897, ../../../private/common-html/sass/views/_application.scss */
 .organizationLinks .organization-links a {
   color: #f39129;
   text-decoration: none;
@@ -11859,25 +11864,25 @@ span.icon_clear:before {
   text-decoration: underline;
 }
 
-/* line 898, ../../../private/common-html/sass/views/_application.scss */
+/* line 904, ../../../private/common-html/sass/views/_application.scss */
 #application-metadata-tab h1 {
   float: none;
 }
-/* line 901, ../../../private/common-html/sass/views/_application.scss */
+/* line 907, ../../../private/common-html/sass/views/_application.scss */
 #application-metadata-tab .table-metadata {
   max-width: 875px;
 }
-/* line 903, ../../../private/common-html/sass/views/_application.scss */
+/* line 909, ../../../private/common-html/sass/views/_application.scss */
 #application-metadata-tab .table-metadata .metadata-key {
   width: 175px;
 }
 
-/* line 910, ../../../private/common-html/sass/views/_application.scss */
+/* line 916, ../../../private/common-html/sass/views/_application.scss */
 #application-requiredFieldSummary-tab .auth-actions button {
   display: block;
 }
 
-/* line 915, ../../../private/common-html/sass/views/_application.scss */
+/* line 921, ../../../private/common-html/sass/views/_application.scss */
 h2 > i.is-right {
   float: right;
 }
