--- a/resources/public/lp-static/css/main.css
+++ b/resources/public/lp-static/css/main.css
@@ -1,4 +1,4 @@
-@import url('main-blessed1.css?z=1453272736239');
+@import url('main-blessed1.css?z=1453299170387');
 
 /* line 131, ../../../private/common-html/sass/partials/_conversation.scss */
 .comment-controls .comment-request select {
@@ -1583,15 +1583,15 @@ ul.no-bullets {
 }
 /* line 21, ../../../private/common-html/sass/partials/_archival-summary.scss */
 .archival-summary-table i {
-  font-size: 22px;
+  font-size: 20px;
 }
 /* line 23, ../../../private/common-html/sass/partials/_archival-summary.scss */
 .archival-summary-table i.enabled {
-  color: #04c714;
+  color: #46b02d;
 }
 /* line 26, ../../../private/common-html/sass/partials/_archival-summary.scss */
 .archival-summary-table i.disabled {
-  color: #da6ded;
+  color: #e34319;
 }
 /* line 30, ../../../private/common-html/sass/partials/_archival-summary.scss */
 .archival-summary-table .attachment-type-container {
@@ -1621,7 +1621,7 @@ ul.no-bullets {
 }
 /* line 44, ../../../private/common-html/sass/partials/_archival-summary.scss */
 .archival-summary-table .attachment-type-header {
-  margin-left: 30px;
+  margin-left: 34px;
 }
 /* line 47, ../../../private/common-html/sass/partials/_archival-summary.scss */
 .archival-summary-table .attachment-row {
@@ -1643,7 +1643,7 @@ ul.no-bullets {
   cursor: pointer;
   padding: 6px 0 5px 0;
   position: relative;
-  margin-left: 30px;
+  margin-left: 34px;
 }
 /* line 19, ../../../private/common-html/sass/main.scss */
 .archival-summary-table .attachment-row .attachment-row-top:before, .archival-summary-table .attachment-row .attachment-row-top:after {
@@ -1730,19 +1730,19 @@ ul.no-bullets {
 .archival-summary-table .archival-status {
   float: left;
   width: 28px;
-  padding: 9px 0 0 3px;
+  padding: 6px 0 0 6px;
+  text-align: center;
 }
-/* line 119, ../../../private/common-html/sass/partials/_archival-summary.scss */
+/* line 120, ../../../private/common-html/sass/partials/_archival-summary.scss */
 .archival-summary-table .archival-status input {
-  position: relative;
-  top: -2px;
-  margin: 0 0 0 1px;
+  margin: 0;
 }
-/* line 125, ../../../private/common-html/sass/partials/_archival-summary.scss */
+/* line 124, ../../../private/common-html/sass/partials/_archival-summary.scss */
 .archival-summary-table .archival-status-header {
   float: left;
   width: 28px;
-  padding-left: 8px;
+  padding-left: 6px;
+  text-align: center;
 }
 /* line 130, ../../../private/common-html/sass/partials/_archival-summary.scss */
 .archival-summary-table .attachment-type {
