--- a/resources/private/common-html/sass/views/_application.scss
+++ b/resources/private/common-html/sass/views/_application.scss
@@ -189,7 +189,7 @@ $app-gray-darkest: $gray187;
       div {
         height: 24px;
         span {
-          //color: darken($lp-light-grey, 10%);
+          color: darken($lp-light-grey, 40%);
           position: relative;
           padding: 4px 8px 4px 24px;
           display: inline-block;
