--- a/resources/private/common-html/sass/views/_side_panel.scss
+++ b/resources/private/common-html/sass/views/_side_panel.scss
@@ -226,12 +226,11 @@
       margin-bottom: 0;
     }
   }
-}
-
-#conversation-panel.highlight-conversation {
-  textarea {
-    box-shadow: inset 0 0 10px darken($lp-orange, 10%);
-    border-color: $lp-orange;
+  .highlight-conversation {
+    textarea {
+      box-shadow: inset 0 0 10px darken($lp-orange, 10%);
+      border-color: $lp-orange;
+    }
   }
 }
 
